# end-to-end-smkex

./: CMakeLists.txt  LICENSE  README.md  backup_CMakeLists.txt  detalii_implementare_Smkex.c  detalii_implementare_Smkex.c~  smkex.tar  smkex2.tar  smkex3.tar  smkex4.tar  smkex5.tar  smkex8.tar
MultiPathVoIPLite/: CMakeLists.txt
MultiPathVoIPLite/auto_resend/include/: MpMsgPayload.h
MultiPathVoIPLite/auto_resend/src/: MpAutoResendEngine.cpp
MultiPathVoIPLite/base_service/include/: MpBaseService.h
MultiPathVoIPLite/buddy/include/: MpIPresence.h  MpIPresenceList.h
MultiPathVoIPLite/buddy/src/: MpBuddy.cpp  MpBuddyList.cpp  MpPresence.cpp
MultiPathVoIPLite/call_manager/include/: MpCall.h  MpICallTimeout.h  MpICallTimer.h
MultiPathVoIPLite/call_manager/src/: MpCallManager.cpp
MultiPathVoIPLite/data_msg/include/: MpIInvitationCallback.h  MpMsg.h  MpMsgManager.h
MultiPathVoIPLite/data_msg/src/: MpMsg.cpp  MpMsgManager.cpp  MpMsgTransport.cpp
MultiPathVoIPLite/sip_stack/include/: MpISIPStack.h
MultiPathVoIPLite/sip_stack/src/: MpSIPStack.cpp
MultiPathVoIPLite/tests/include/: MpPresenceListMock.h  MpPresenceMock.h  MpSIPStackMock.h
MultiPathVoIPLite/tests/src/: MpMain.cpp  MpMsgTransportMock.cpp  MpPresenceListMock.cpp  MpSIPStackMock.cpp  MpTestUtils.cpp  MpTests.cpp  MpTestsBuddy.cpp
MultiPathVoIPLite/user_account/include/: MpAccSettings.h
MultiPathVoIPLite/utils/include/: MpBuffer.h  MpCheck.h  MpIOutputStream.h  MpIRWLock.h  MpLinuxOutputStream.h  MpLock.h  MpLogger.h  MpNetworkState.h  MpPool.h  MpRWLock.h  MpSingleton.h
MultiPathVoIPLite/utils/src/: MpBuffer.cpp  MpLinuxOutputStream.cpp  MpLock.cpp  MpLogger.cpp  MpUtils.cpp
auto_resend/include/: MpAutoResendEngine.h  MpIDBConnector.h  MpIMsgTransport.h  MpIMsgTransportNotif.h  MpMsgPool.h
auto_resend/src/: MpMsgPayload.cpp  MpMsgPool.cpp
base_service/src/: MpBaseService.cpp
buddy/include/: MpBuddy.h  MpBuddyList.h  MpIPresence.h  (+1 more)
(+45 files in other folders)
